[package]
name = "nextmeet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15.0", features = ["full"]}
oauth2 = "3.0"
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.78"
urlencoding = "2.1.0"
chrono = "0.4.19"
regex = "1.5.4"
