[package]
name = "nextmeet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
oauth2 = "3.0.0"
reqwest = "0.11.19"
serde = "1.0.152"
serde_json = "1.0.91"
urlencoding = "2.1.2"
chrono = "0.4.23"
regex = "1.7.1"
openssl = "0.10.48"
hyper = "0.14.27"
